# Matam-HW-2

./: .gitignore  CMakeLists.txt
dry/: Pirate.cpp  Pirate.h  log.txt  main.cpp
wet/: MataMvdia.cpp  MataMvdia.h  MataMvidia.cpp  MataMvidia.h  Matrix.cpp  Matrix.h  MvidiaTest  compile_and_run.sh  main.cpp  matrix_test.cpp  test_results.html
wet/tests/: mataMvidiaE2E.out  matrixInit.out  matrixTransformations.out  zeroMatrix.out
